<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_160sdp"
    android:backgroundTint="@color/navyBlue"
    app:cardCornerRadius="@dimen/_20ssp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10ssp">

        <TextView
            android:id="@+id/lbl_heading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/dashboard_verification"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_user_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10ssp"
            android:hint="@string/dashboard_enter_otp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/lbl_heading"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/navyBlue"
            android:text="@string/dashboard_submit"
            app:layout_constraintTop_toBottomOf="@id/txt_user_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>