<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100sdp"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardElevation="@dimen/_5sdp">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:scaleType="fitCenter"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <ImageView
            android:id="@+id/remove_item"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_delete_24" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_alignStart="@id/item_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/stepper"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@id/item_price"
            android:layout_alignStart="@id/item_price"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/gray"
            android:gravity="center">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_remove_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txtquantity"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/white"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="@dimen/_15sdp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/ic_baseline_add_24"
                android:backgroundTint="@color/gray"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/_20"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>